rio/grammar.ebnf
IGNORE: " ";
ARGSSEP: ",\n*";
NUMBER: "-?0|[1-9][0-9]*";
IDENTIFIER: "[a-zA-Z_][0-9a-zA-Z_]*";
TERM: "\n+|;\n*";
OP: "\(\n*";
CP: "\n*\)";

main: block [EOF];

block: expr [TERM] >block< | expr [TERM]?;
expr: message >expr< | message;
message: symbol arguments?;
arguments: [OP] <args>? [CP];
args: expr ([ARGSSEP] expr)* [ARGSSEP]?;
symbol: <IDENTIFIER> | <NUMBER>;
